Fixed Express hosting + added css/js
1) Fixed Express app to send users to the index page upon requesting the
landing page.
2) Added blank css/js files to the application

--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Test Video PLayer</title>
+        <link rel="stylesheet" type="text/css" href="css/global.css" />
+        <script src="js/video-player.js"></script>
     </head>
     <body>
-        <h1>This is an example</h1>
+        <h1>This is an example 2</h1>
     </body>
 </html>
