Added future dependencies
1) MInor changes to files

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,6 @@
         <script src="js/video-player.js"></script>
     </head>
     <body>
-        <h1>This is an example 2</h1>
+        <h1>This is an example</h1>
     </body>
 </html>
