Added video tag + fixed file hosting issue.
1) Added basic HTML for video streaming
2) Updated node to make the resources folder public.
3) Minor CSS changes to outline video tag
4)

--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,13 @@
         <script src="js/video-player.js"></script>
     </head>
     <body>
-        <h1>This is an example</h1>
-        <video src="">
-            
-        </video>
+        <header>
+            <h1>This is an example</h1>
+        </header>
+        <main>
+            <video class="main-video" controls src="video/mp4/mmu.mp4">
+                <source src="../resources/video/webm/MMU.webm">
+            </video>
+        </main>
     </body>
 </html>
