Added poster + sources
1) Added poster for the video
2) Implemented the source tag
3) Incremented version

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,10 @@
             <h1>This is an example</h1>
         </header>
         <main>
-            <video class="main-video" controls src="video/mp4/mmu.mp4">
-                <source src="../resources/video/webm/MMU.webm">
+            <video class="main-video" controls width="640" height="360" poster="image/poster.jpg">
+                <source src="video/mp4/mmu.mp4">
+                <source src="video/webm/MMU.webm">
+                <p>Browser does not support HTML5 video playback. Try using a modern browser like <a href="https://vivaldi.com">Vivaldi</a></p>
             </video>
         </main>
     </body>
