WIP Added favicon
1) Added basic favicon, need to add more types

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,14 @@
         <title>Test Video PLayer</title>
         <link rel="stylesheet" type="text/css" href="css/global.css" />
         <script src="js/video-player.js"></script>
+        <!--
+         When deciding how to implement the favicon I consulted the follwoing link:
+         -1- 'What’s in the head? Metadata in HTML' (09-10-18), Mozilla Developer Network [online] Accessed 15-11-2018 https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML#Adding_custom_icons_to_your_site ---
+
+         todo implement the rest of the favicon types
+         -->
+        <link href="image/favicon.png" rel="icon" sizes="144x144" >
+
     </head>
     <body>
         <header>
