--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 
          todo implement the rest of the favicon types
          -->
-        <link href="image/favicon.png" rel="icon" sizes="144x144" >
+        <link href="image/favicon.png" type="image/png" rel="icon" sizes="144x144" >
 
     </head>
     <body>
@@ -19,7 +19,7 @@
             <h1>This is an example</h1>
         </header>
         <main>
-            <video class="main-video" controls width="640" height="360" poster="image/poster.jpg">
+            <video class="main-video" controls width="640" height="360" poster="image/jpeg/poster.jpg">
                 <source src="video/mp4/mmu.mp4">
                 <source src="video/webm/MMU.webm">
                 <p>Browser does not support HTML5 video playback. Try using a modern browser like <a href="https://vivaldi.com">Vivaldi</a></p>
