WIP Video controls

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,10 @@
                 <source src="video/webm/MMU.webm">
                 <p>Browser does not support HTML5 video playback. Try using a modern browser like <a href="https://vivaldi.com">Vivaldi</a></p>
             </video>
+            <!-- Attempting to not use ID's for controls which may limit amount of videos on the same page -->
+            <div class="main-video-controls">
+                <button type="button" class="main-video-controls-play">Play</button>
+            </div>
         </main>
     </body>
 </html>
