--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,11 @@
             <div id="main-video-controls">
                 <button type="button" id="main-video-controls-play">Play</button>
                 <button type="button" id="main-video-controls-mute">Mute</button>
+                <button type="button" id="main-video-controls-fullscreen">Full-Screen</button>
+                <button type="button" id="main-video-controls-backward">Backward</button>
+                <button type="button" id="main-video-controls-backward-step">Backward Step</button>
+                <button type="button" id="main-video-controls-forward">Forward</button>
+                <button type="button" id="main-video-controls-forward-step">Forward Step</button>
             </div>
         </main>
     </body>
