--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
                 <button type="button" id="main-video-controls-backward-step">Backward Step</button>
                 <button type="button" id="main-video-controls-forward">Forward</button>
                 <button type="button" id="main-video-controls-forward-step">Forward Step</button>
+                <input type="range" id="main-video-controls-slider" min="0" max="100" step="2" value="0">
             </div>
         </main>
     </body>
