--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,10 @@
             </video>
             <!-- Attempting to not use ID's for controls which may limit amount of videos on the same page -->
             <div id="main-video-controls">
+                <div id="main-video-controls-locationSlider">
+                    <input type="range" id="main-video-controls-locationSlider-input" min="0" max="100" step="1" value="0">
+                </div>
+
                 <button type="button" id="main-video-controls-play">Play</button>
                 <button type="button" id="main-video-controls-mute">Mute</button>
                 <button type="button" id="main-video-controls-fullscreen">Full-Screen</button>
@@ -33,8 +37,11 @@
                 <button type="button" id="main-video-controls-backward-step">Backward Step</button>
                 <button type="button" id="main-video-controls-forward">Forward</button>
                 <button type="button" id="main-video-controls-forward-step">Forward Step</button>
-                <input type="range" id="main-video-controls-volumeSlider" min="0" max="1" step="0.01" value="1">
-                <input type="range" id="main-video-controls-locationSlider" min="0" max="100" step="1" value="0">
+                <div id="main-video-controls-volumeSlider">
+                    <input type="range" id="main-video-controls-volumeSlider-input" min="0" max="1" step="0.01" value="1">
+                    <span id="main-video-controls-volumeSlider-value">0</span>
+                </div>
+
             </div>
         </main>
     </body>
