--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,13 @@
                 <button type="button" id="main-video-controls-fullscreen">Full-Screen</button>
                 <button type="button" id="main-video-controls-backward">Backward</button>
                 <button type="button" id="main-video-controls-forward">Forward</button>
-
+                <select id="main-video-controls-speedChanger" name="Speed Changer">
+                    <option value="0.25">0.25x</option>
+                    <option value="0.5">0.5x</option>
+                    <option value="1" selected>1x</option>
+                    <option value="1.25">1.25x</option>
+                    <option value="1.5">1.5x</option>
+                </select>
                 <div id="main-video-controls-volumeSlider">
                     <input type="range" id="main-video-controls-volumeSlider-input" min="0" max="1" step="0.01" value="1">
                     <span id="main-video-controls-volumeSlider-value">0</span>
