Added current timestamp & maximum duration
1) Added timestamp for the current location in the video
2) Added maximum duration label

--- a/www/index.html
+++ b/www/index.html
@@ -26,8 +26,11 @@
             </video>
             <!-- Attempting to not use ID's for controls which may limit amount of videos on the same page -->
             <div id="main-video-controls">
+
                 <div id="main-video-controls-locationSlider">
+                    <span id="main-video-controls-currentTime">0</span>
                     <input type="range" id="main-video-controls-locationSlider-input" min="0" max="100" step="1" value="0">
+                    <span id="main-video-controls-maximumTime">0</span>
                 </div>
 
                 <button type="button" id="main-video-controls-play">Play</button>
