Added Font Awesome Pro css + test usage

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
                     <span id="main-video-controls-volumeSlider-value">0</span>
                 </div>
             </div>
+            <i class="fa">&#xf558</i>
         </main>
     </body>
 </html>
