Switched to using CSS classes for icons

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
                     <span id="main-video-controls-volumeSlider-value">0</span>
                 </div>
             </div>
-            <i class="fa">&#xf558</i>
+            <i class="fa fa-atlas"></i>
         </main>
     </body>
 </html>
