--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Test Video PLayer</title>
         <link rel="stylesheet" type="text/css" href="css/global.css" />
+        <link rel="stylesheet" type="text/css" href="fonts/all.css"
         <script src="js/video-player.js"></script>
         <!--
          When deciding how to implement the favicon I consulted the follwoing link:
@@ -50,7 +51,7 @@
                     <span id="main-video-controls-volumeSlider-value">0</span>
                 </div>
             </div>
-            <i class="fa fa-atlas"></i>
+            <i class="fa fa-pause"></i>
         </main>
     </body>
 </html>
