--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Test Video PLayer</title>
         <link rel="stylesheet" type="text/css" href="css/global.css" />
-        <link rel="stylesheet" type="text/css" href="fonts/all.css"
+        <link rel="stylesheet" type="text/css" href="fonts/all.css"/>
         <script src="js/video-player.js"></script>
         <!--
          When deciding how to implement the favicon I consulted the follwoing link:
