Padding duration & timestamp with 0's
1) Adding padding to the start of the duration and timestamp. To
accurately represent hh:mm:ss

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
             <h1>18016816, Alex James Knight</h1>
         </header>
         <main>
-            <video controls class="main-video" id="main-video" width="640" height="360" poster="image/jpeg/poster.jpg">
+            <video class="main-video" id="main-video" width="640" height="360" poster="image/jpeg/poster.jpg">
                 <source src="video/mp4/mmu.mp4">
                 <source src="video/webm/MMU.webm">
                 <p>Browser does not support HTML5 video playback. Try using a modern browser like <a href="https://vivaldi.com">Vivaldi</a></p>
@@ -29,11 +29,11 @@
             <div id="main-video-controls" class="main-video-controls">
 
                 <div id="main-video-controls-locationSlider" class="main-video-controls-locationSlider">
-                    <span id="main-video-controls-currentTime" title="Current Location">0:0</span>
+                    <span id="main-video-controls-currentTime" title="Current Location">00:00</span>
 
                     <input type="range" id="main-video-controls-locationSlider-input" class="main-video-controls-locationSlider-input" min="0" max="100" step="1" value="0">
 
-                    <span id="main-video-controls-maximumTime" title="Maximum duration">0:0</span>
+                    <span id="main-video-controls-maximumTime" title="Maximum duration">00:00</span>
                 </div>
 
                 <button type="button" id="main-video-controls-play" title="Toggle Video Play">
