--- a/www/index.html
+++ b/www/index.html
@@ -29,11 +29,11 @@
             <div id="main-video-controls" class="main-video-controls">
 
                 <div id="main-video-controls-locationSlider" class="main-video-controls-locationSlider">
-                    <span id="main-video-controls-currentTime" title="Current Location">00:00</span>
+                    <span id="main-video-controls-currentTime" class="main-video-controls-currentTime" title="Current Location">00:00</span>
 
                     <input type="range" id="main-video-controls-locationSlider-input" class="main-video-controls-locationSlider-input" min="0" max="100" step="1" value="0">
 
-                    <span id="main-video-controls-maximumTime" title="Maximum duration">00:00</span>
+                    <span id="main-video-controls-maximumTime" class="main-video-controls-maximumTime" title="Maximum duration">00:00</span>
                 </div>
 
                 <button type="button" id="main-video-controls-play" title="Toggle Video Play">
@@ -63,12 +63,12 @@
                     <option value="1.25">1.25x</option>
                     <option value="1.5">1.5x</option>
                 </select>
+
                 <div id="main-video-controls-volumeSlider">
                     <input type="range" id="main-video-controls-volumeSlider-input" min="0" max="1" step="0.1" value="0.6">
                     <span id="main-video-controls-volumeSlider-value">0</span>
                 </div>
             </div>
-
         </main>
     </body>
 </html>
