WIP Pause and muteicon change
1) Basic icon change when button  is pressed, need to  then bind to element

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
                 </button>
 
                 <button type="button" id="main-video-controls-mute" title="Mute Video">
-                    <i class="fas fa-volume-slash"></i>
+                    <i class="fas fa-volume-up"></i>
                 </button>
 
                 <button type="button" id="main-video-controls-fullscreen" title="Toggle Fullscreen">
